--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@ h3 {
 
 .header {
   width: 100%;
-  padding: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -47,7 +46,7 @@ h3 {
 
 .container {
   position: relative;
-  min-height: 85vh;
+  min-height: 80vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -63,16 +62,16 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./background.jpeg");
+  background-image: url("./background.jpg");
   background-size: cover;
   background-position: center;
-  opacity: 0.3;
+  opacity: 0.5;
   z-index: -1;
 }
 
 .timer {
-  margin: 10px;
-  color: #42474d;
+  margin: 20px;
+  color: #fafafa;
   font-size: 20px;
 }
 
@@ -102,7 +101,6 @@ h3 {
 
 .button-grid {
   width: 100%;
-  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -135,8 +133,9 @@ h3 {
 }
 
 .numbers {
-  color: #16162d;
+  color: #fafafa;
   font-size: 20px;
+  margin-bottom: 20px;
 }
 
 .info {
@@ -194,10 +193,8 @@ h3 {
   font-weight: bold;
 }
 .emoji {
-  font-size: 32px;
+  font-size: 26px;
   color: #5723e7;
-  height: 40px;
-  margin-top: 60px;
   margin: 20px;
 }
 
